--- a/src/app/pages/planilla/planilla.component.html
+++ b/src/app/pages/planilla/planilla.component.html
@@ -287,7 +287,7 @@
               </li>
             </ul>
             <div class="mb-3 my-4">
-              <h5 style="text-align: right;"><strong>{{totalPrestaciones | currency}}</strong></h5>
+              <h5 style="text-align: right;color: white;" *ngIf="totalPrestaciones >0"><strong>{{totalPrestaciones | currency}}</strong></h5>
             </div>
           </div>
 
@@ -302,7 +302,7 @@
               </li>
             </ul>
             <div class="mb-3 my-4">
-              <h5 style="text-align: right;color: white;"><strong>{{totalDeducciones | currency}}</strong></h5>
+              <h5 style="text-align: right;color: white;" *ngIf="totalDeducciones >0"><strong>{{totalDeducciones | currency}}</strong></h5>
             </div>
           </div>
 
